Die 1 und die Differenz zwischen 1 und 0

--- a/doc/algebra.tex
+++ b/doc/algebra.tex
@@ -116,8 +116,16 @@ Wie verhalten sich die Vektoren hinsichtlich des neutralen Elements und des inve
 	Klar ist, je mehr charakteristische Eigenschaften ein Körper hat, desto weniger wahrscheinlich ist es, dass es Instanzen dieses Körpers auf möglichst vielen Verknüpfungen und Wertebereichen gibt. Bei der Untersuchung dieser Frage geht es um die Verknüpfungen und die Wertebereiche. Denn in ihrer Kombination wird das Ergebnis bestimmt und sichtbar, ob eine Instanz des Körpers noch Instanz des Körpers ist. Es muss also um Verknüpfungen und Wertebereiche gehen. Werden die Verknüpfungen nicht betrachtet, lässt sich kein Ergebnis berechnen, da die Instanzen miteinander noch nicht mal zu einem Ergebnis kombiniert werden. Wird der Wertebereich nicht betrachtet, lässt sich auch kein Ergebnis in einem konkreten Wertebereich wie den reellen oder binären Zahlen berechnen.
 
 	Es reicht für einen wohl geformten Körper, die Verknüpfungen und die Wertebereiche zu betrachten. Werden weitere Eigenschaften wie das neutrale oder das inverse Element als charakteristische Eigenschaften betrachtet, geht dies mit mehr Aufwand in der Anwendung der Verknüpfungen für solche Instanzen einher. Dies wird zum Beispiel daran deutlich, dass der Körper, wie ursprünglich definiert, die 1 als neutrales Element hat aber der Ring, wie ursprünglich definiert, nicht.
+	
+	Die Differenz zwischen 1 und 0 ist die größte, es gibt keine größere Differenz. Dass für das Betrachten der größten Differenz nur benachbarte ganze Zahlen relevant sind, geht daraus hervor, dass nur die kleinsten, nicht weiter teilbaren Zahlen dazu in Betracht kommen und erst darin ihr eigentlicher Wert durch Vergleichen klar wird. Die Differenz zwischen 2 und 1 ist nicht so groß. Warum? Egal, mit welcher anderen Zahl außer 0 die 0 vervielfacht wird, das Ergebnis der Verfielfachung ist wieder 0. Bei der 1 ist das anders. Wird die 1 mit 2 vervielfacht, ist das Ergebnis der Verfielfachung 2. Das ist eigenartig und stellt die Frage, warum erscheint die Vervielfachung als angemessenere Verknüpfung in ihrer Wirkung als die einfache Addition? Die Verfielfachung ist angenehmer, weil mit ihr ein größerer Ergebnisraum erreicht wird als mit der Addition. Die Addition kann auf der anderen Seite durch die Multiplikation nicht ersetzt werden. Dies begründet, dass die Addition und die Multiplikation beides notwendige Verknüpfungen sind für einen wohl geformten Körper.
 \end{proof}
 
+\begin{satz}
+	Die 1 ist die wichtigste Zahl aller ganzen Zahlen. 
+\end{satz}
+\begin{proof}
+	Die Differenz zwischen 0 und 1 ist größer ist als die zwischen 2 und 1, aber die Differenz zwischen 3 und 2 ist nicht größer als die zwischen 2 und 1. Dies gilt für alle folgenden Zahlen von 2, 3, 4 usw. Damit ist klar, dass 0 und 1 die wichtigsten Zahlen sind, denn ihre Differenz ist unter allen ganzen Zahlen die größte. Da 0 aber keinen Wert hat, außer den, den sie der 1 in der Differenz gibt, ist von ihnen die 1 die wichtigere Zahl.
+\end{proof}
 \begin{lemma}
 	Die Vektoren bilden einen wohl geformten Körper für reelle oder binäre Zahlen.
 \end{lemma}
