Die binären Zahlen sind die wichtigsten Zahlen

--- a/doc/algebra.tex
+++ b/doc/algebra.tex
@@ -128,11 +128,20 @@ Wie verhalten sich die Vektoren hinsichtlich des neutralen Elements und des inve
 \begin{proof}
 	Die Differenz zwischen 0 und 1 ist größer ist als die zwischen 2 und 1, aber die Differenz zwischen 3 und 2 ist nicht größer als die zwischen 2 und 1. Dies gilt für alle folgenden Zahlen von 2, 3, 4 usw. Damit ist klar, dass 0 und 1 die wichtigsten Zahlen sind, denn ihre Differenz ist unter allen ganzen Zahlen die größte. Da 0 aber keinen Wert hat, außer den, den sie der 1 in der Differenz gibt, ist von ihnen die 1 die wichtigere Zahl.
 \end{proof}
+\begin{satz}
+	Die binären Zahlen $\{0, 1\}$ sind die wichtigsten Zahlen. 
+\end{satz}
+\begin{proof}
+	Die binären Zahlen sind die wichtigsten Zahlen aller Zahlen. Nicht die natürlichen oder die ganzen oder die reellen Zahlen sind wichtiger. Denn die binären Zahlen enthalten die wichtigsten aller Zahlen, die 1 und die 0. Die binären Zahlen sind in ihrer Anzahl so klein, dass ihnen darin auch die größte Bedeutung zukommt im Vergleich zu den anderen Zahlen. Die 1 ist die wichtigste Zahl und nach ihr die 0. Denn der Bezug zur 0 ist bezogen auf die Differenz der wichtigere, da 2 schon wieder die Summe aus 1 und 1 ist. 
+	
+	Der Wert von binären Zahlen ist exponentiell in der Basis 2. Erst dies ermöglicht andererseits das Halbieren in der effizienten Anwendung von Verknüpfungen von Strukturen in ihrem Schwerpunkt. Denn damit wird die optimale Anwendung hinsichtlich der daraus resultierenden logarithmischen Laufzeit für die Rekursionstiefe erreicht.
+\end{proof}
+In der Natur findet das Teilen im Schwerpunkt auch in der Zellteilung biologischen Lebens statt. Ohne Zellteilung gibt es kein neues Leben. Dass die binären Zahlen heute mit der Informatik viele Lebensbereiche so erleichtern, überrascht daher nicht. Die binären Zahlen sind die Zahlen, die die größte Bedeutung haben, wenn es um das Finden von wohl geformten Körpern geht.
 \begin{lemma}
-	Die Vektoren bilden einen wohl geformten Körper für reelle oder binäre Zahlen.
+	Vektoren bilden einen wohl geformten Körper für binäre oder reelle Zahlen.
 \end{lemma}
 \begin{proof}
-	Der Beweis geht daraus hervor, dass Vektoren diese charakteristischen Eigenschaften haben: (1) Die Verknüpfungen wie  Addition und Multiplikation wie in Definition \ref{def:vektor-summe} und Definition \ref{def:vektor-produkt} definiert für die (2) Wertebereiche der reellen oder binären Zahlen.
+	Der Beweis geht daraus hervor, dass Vektoren diese charakteristischen Eigenschaften haben: (1) Die Verknüpfungen wie  Addition und Multiplikation wie in Definition \ref{def:vektor-summe} und Definition \ref{def:vektor-produkt} definiert für die (2) Wertebereiche der binären oder reellen Zahlen.
 \end{proof}
 \begin{satz}
 	Die Algebra ist Grundlage für die Analyse.
